Fixed D8. Add vertical-align for inline-block elements.

--- a/css/style.css
+++ b/css/style.css
@@ -686,6 +686,7 @@ a {
 
 .icon {
   display: inline-block;
+  vertical-align: middle;
   padding: 9px;
   border-radius: 50%;
   height: 23px;
